# ai_developer

./: .claude.json  .claude.json.backup  .env.template  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MCP_AUTHENTICATION_ISSUE.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  features.md  fix_plan.md  install.sh  memory_server_docs.md  new_mcp_additions.md  pyproject.toml
.aidev/: workflows.yaml
.claude/: settings.local.json
.cursor/: BUGBOT.md  mcp.json  rules.json
.github/workflows/: tests.yml
configs/: supported-tools.json
configs/mcp-servers/: atlassian.json  compass.json  git.json  github.json  gitlab.json  heimdall.json  memory.json
docs/: BUILD_SUMMARY.md  MCP_REFACTORING.md  MCP_SERVER_SETUP.md  TOOL_LAUNCHING.md  USECASES.md  ai-developer-architecture.md  aider-ollama-integration.md  architecture.md  break-glass-hotfix-strategy.md  commands.md  deployment-recommendation.md  dx-engineer-workflows.md  engineering-workflow.md  features.md  k8s-personal-options.md  mcp_browser.md  planning-universal-rebuild.md  pr_feedback_workflow_guide.md  profile-workflow-examples.md  profiles.md  reference-original-readme.md  system_overview.md  workflow_manifest_guide.md  workflow_system_diagram.md  workflows.md
docs/issues/: 01-quickstart.md  02-profiles-switch.md  03-tui-config.md  04-mcp-browse.md  05-error-handling.md  06-env-management.md  07-docs-refresh.md  08-integration-tests.md
examples/: README.md  global-env-example.env  mcp-registry.json
examples/profiles/: aider.json  api-engineer.json  code-surgeon.json  debugger.json  default-personal.json  default-work.json  devops-gitlab.json  devops.json  documentation-writer.json  frontend-ui.json  ml-engineer.json  mobile-dev.json  onboarding.json  pair-programmer.json  qa-gitlab.json  researcher-advanced.json  security-research.json  security.json  testing-guru.json  web-dev.json
mcp-servers/retire-e2e-tests/: README.md  index.ts  package-lock.json  package.json
src/aidev/: __init__.py  ai.py  backup.py  cli.py  config.py  constants.py  env_requirements.py  errors.py  mcp.py  mcp_config_generator.py  models.py  profiles.py  quickstart.py  review.py  secrets.py  test_workflow_manifest.py  tools.py  tui_config.py  tui_config.tcss  tui_mcp_browser.py  tui_mcp_browser.tcss  tutorial.py  utils.py  (+1 more)
templates/: README.md  mcp.json
tests/: README.md  __init__.py  run-tests.sh  test-ai-agents.sh  test-ai-core.sh  test-ai-installation.sh  test-ai-integration.sh  test-ai-profiles.sh  test-ai-project.sh  test-ai-utils.sh  test-framework.sh
(+113 files in other folders)
