[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidev"
version = "0.1.0"
description = "Universal AI development environment manager with profile-based MCP configurations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "development", "mcp", "cursor", "claude", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "rich-click>=1.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "toml>=0.10.2",
    "requests>=2.31.0",
    "textual>=0.50.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]

[project.scripts]
aidev = "aidev.cli:main"
ai = "aidev.cli:main"

[project.urls]
Homepage = "https://github.com/lastnamehurt/aidev"
Repository = "https://github.com/lastnamehurt/aidev"
Issues = "https://github.com/lastnamehurt/aidev/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aidev" = ["configs/**/*", "prompts/**/*", "tui_*.tcss", "examples/**/*"]

# Include configs directory in the package
[tool.setuptools]
include-package-data = true

# Manifest for additional files
# Create MANIFEST.in if needed with:
# recursive-include configs *.json

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=aidev --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
omit = [
    "src/aidev/quickstart.py",
    "src/aidev/tui_config.py",
    "src/aidev/tui_mcp_browser.py",
    "src/aidev/tutorial.py",
    "src/aidev/ai.py",
]
